# osuml

./: .gitignore  README.md  pyproject.toml
map/: HitObject.py  OsuMap.py
src/game/: core.py
src/game/arcade/: MainWindow.py  demo.py
src/osumap/: HitObject.py  OsuMap.py
tests/: test_map.py
