[tool.poetry]
name = "osuml"
version = "0.1.0"
description = "Reinforcement Learning model to play osu!taiko"
authors = ["Aleksandr Lobanov <alobanov.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arcade = "^2.6.17"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
